--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,13 @@
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
+
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
 
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  <script type="text/javascript" src="/scripts/toggle.js"></script>
+  
   </head>
 
   <body>
@@ -31,6 +34,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <input type="submit" value="compose" id="compose"/>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -39,12 +43,16 @@
         <section class="new-tweet">
             <h2>Compose Tweet</h2>
             <form method="POST" action="/tweets/">
-         
               <textarea name="text" placeholder="What are you humming about?"></textarea>
               <input type="submit" value="Tweet">
-
               <span class="counter">140</span>
             </form>
+            <section class="errors">
+                <h5>Error! Try again!</h5>
+                <!-- css display none,
+                then use slide toggle to display -->
+
+              </section>
           </section>
           <section class="tweet-container">
             <article>
