date and time stamp added correctly

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
     <script type="text/javascript" src="/scripts/app.js"></script>
 
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-  <script type="text/javascript" src="/scripts/toggle.js"></script>
+
+    <script type="text/javascript" src="/scripts/toggle.js"></script>
+
+    <script type="text/javascript" src="/scripts/moment.js"></script>
   
   </head>
 
@@ -49,9 +52,6 @@
             </form>
             <section class="errors">
                 <h5>Error! Try again!</h5>
-                <!-- css display none,
-                then use slide toggle to display -->
-
               </section>
           </section>
           <section class="tweet-container">
@@ -62,7 +62,7 @@
                 <p>@inDaHouse</p>
             </header>
             <section>text here</section>
-            <footer>
+            <footer class="dateAndTime">
               time stamp
             </footer>
           </article>
