Final commit. flag, like, retweet buttons added and CSS fixed.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     
@@ -63,7 +65,9 @@
             </header>
             <section>text here</section>
             <footer class="dateAndTime">
-              time stamp
+             <i class="far fa-flag" aria-hidden='true' id='flag'></i>
+              <i class="far fa-thumbs-up" aria-hidden='true' id='thumb'></i>
+              <i class="fas fa-retweet" aria-hidden='true' id='retweet'></i>
             </footer>
           </article>
           </section>
